@@ -1189,3 +1189,5 @@
 20050111 machines/pentagon.c: Don't allow Interface I to be used with the
 	 Pentagon, it masks the TR-DOS interface (Fred).
 20050111 machines/pentagon.c: Remove if1 from peripherals array (Fred).
+20050112 lib/{tape_ts2068.szx|Makefile.am}: Add TS2068 tape auto-load snapshot
+         tape.c: Fix tape traps for TS2068 (Fred).
